[gd_scene load_steps=2 format=3 uid="uid://cringmenu001"]

[ext_resource type="Script" path="res://ui/ring_menu/ring_menu.gd" id="1_ring_menu"]

[node name="RingMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_ring_menu")

[node name="Container" type="Control" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 100)

[node name="Background" type="ColorRect" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.8)

[node name="CenterCircle" type="ColorRect" parent="Container"]
layout_mode = 0
offset_left = 70.0
offset_top = 70.0
offset_right = 130.0
offset_bottom = 130.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="RingLabel" type="Label" parent="Container"]
layout_mode = 0
offset_left = 0.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 10
text = "Items"
horizontal_alignment = 1

[node name="ItemNameLabel" type="Label" parent="Container"]
layout_mode = 0
offset_left = 40.0
offset_top = 85.0
offset_right = 160.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 8
text = "Item Name"
horizontal_alignment = 1

[node name="ItemDescLabel" type="Label" parent="Container"]
layout_mode = 0
offset_left = 20.0
offset_top = 100.0
offset_right = 180.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 6
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Item description here"
horizontal_alignment = 1
autowrap_mode = 2
